--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
     <link rel="stylesheet" type="text/css" media="screen" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/base.css" />
 </head>
 
 <body>
-    <div class="container">
-        <h1>TEDxHITKolkata</h1>
+    <div id="landing-overlay">
+        <img src="img/logo.png" class="img-responsive" />
+        <div id="countdown-timer">
+            <div id="countdown-timer-days"></div>
+            <div id="countdown-timer-hours"></div>
+            <div id="countdown-timer-minutes"></div>
+            <div id="countdown-timer-seconds"></div>
+        </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous">
@@ -21,6 +28,7 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous">
     </script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
