--- a/index.html
+++ b/index.html
@@ -8,18 +8,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+        crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/base.css" />
 </head>
 
 <body>
     <div id="landing-overlay">
-        <img src="img/logo.png" class="img-responsive" />
+        <img id="landing-overlay-logo" src="img/logo.png" class="img-responsive" />
         <div id="countdown-timer">
-            <div id="countdown-timer-days"></div>
-            <div id="countdown-timer-hours"></div>
-            <div id="countdown-timer-minutes"></div>
-            <div id="countdown-timer-seconds"></div>
+            <div class="countdown-timer-block">
+                <div id="countdown-timer-days"></div>
+                <span class="countdown-divider">:</span>
+                <p class="countdown-description countdown-description-days">DAYS</p>
+            </div>
+            <div class="countdown-timer-block">
+                <div id="countdown-timer-hours"></div>
+                <span class="countdown-divider">:</span>
+                <p class="countdown-description">HOURS</p>
+            </div>
+            <div class="countdown-timer-block">
+                <div id="countdown-timer-minutes"></div>
+                <span class="countdown-divider">:</span>
+                <p class="countdown-description">MINUTES</p>
+            </div>
+            <div class="countdown-timer-block">
+                <div id="countdown-timer-seconds"></div>
+                <p class="countdown-description">SECONDS</p>
+            </div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
