--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             <a href="#"><i class="fab fa-facebook-f fa-2x"></i></a>
             <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
             <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
-            <a href="#"><i class="fab fa-youtube fa-2x"></i></a>
         </div>
+        <button class="btn">EXPLORE</button>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous">
