added scroll on "explore" feature

--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
         <img id="landing-overlay-logo" src="img/logo.png" class="img-responsive" />
         <div id="countdown-timer">
             <div class="countdown-timer-block">
-                <div id="countdown-timer-days"></div>
+                <div id="countdown-timer-days">73</div>
                 <span class="countdown-divider">:</span>
                 <p class="countdown-description countdown-description-days">DAYS</p>
             </div>
             <div class="countdown-timer-block">
-                <div id="countdown-timer-hours"></div>
+                <div id="countdown-timer-hours">14</div>
                 <span class="countdown-divider">:</span>
                 <p class="countdown-description">HOURS</p>
             </div>
             <div class="countdown-timer-block">
-                <div id="countdown-timer-minutes"></div>
+                <div id="countdown-timer-minutes">42</div>
                 <span class="countdown-divider">:</span>
                 <p class="countdown-description">MINUTES</p>
             </div>
             <div class="countdown-timer-block">
-                <div id="countdown-timer-seconds"></div>
+                <div id="countdown-timer-seconds">23</div>
                 <p class="countdown-description">SECONDS</p>
             </div>
         </div>
@@ -43,7 +43,10 @@
             <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
             <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
         </div>
-        <button class="btn">EXPLORE</button>
+        <button id="explore-button" class="btn">EXPLORE</button>
+    </div>
+    <div id="main" class="container">
+        <h1>TEDxHITKolkata</h1>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous">
@@ -51,6 +54,7 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous">
     </script>
+    <script src="js/countdown.js"></script>
     <script src="js/script.js"></script>
 </body>
 
