started  work on landing page - added google maps

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/base.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/fonts.css" />
 </head>
 
 <body>
@@ -45,8 +46,21 @@
         </div>
         <button id="explore-button" class="btn">EXPLORE</button>
     </div>
-    <div id="main" class="container">
-        <h1>TEDxHITKolkata</h1>
+    <div id="main">
+        <div id="landing" class="text-center font__open-sans">
+            <em>Out of the Box</em>
+            <hr class="small-hr" />
+            <div class="details">
+                <p>10:00 - January 18, 2019</p>
+                <p>at</p>
+                <p>Swami Vivekananda Auditorium</p>
+                <p>Heritage Institute of Technology</p>
+            </div>
+            <hr class="small-hr" />
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.6506485752516!2d88.41647511451619!3d22.517286940674357!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a027409f5382055%3A0xa47cf90c19bf73c2!2sHeritage+Institute+of+Technology!5e0!3m2!1sen!2sin!4v1541431238512"
+                height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <p></p>
+        </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous">
