work on "speakers" started

--- a/index.html
+++ b/index.html
@@ -59,7 +59,32 @@
             <hr class="small-hr" />
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.6506485752516!2d88.41647511451619!3d22.517286940674357!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a027409f5382055%3A0xa47cf90c19bf73c2!2sHeritage+Institute+of+Technology!5e0!3m2!1sen!2sin!4v1541431238512"
                 height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-            <p></p>
+            <nav class="navbar navbar-inverse">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="#"></a>
+                    </div>
+                    <div class="collapse navbar-collapse" id="myNavbar">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li class="active"><a href="#">SPEAKERS</a></li>
+                            <li><a href="#">TEAM</a></li>
+                            <li><a href="#">ABOUT</a></li>
+                            <li><a href="#">SPONSORS</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <div class="container">
+                <h1 class="font__oswald sub-heading">SPEAKERS 2019</h1>
+                <hr class="small-hr" />
+                <p>An assemblage of the best speakers in the industry to inform &amp; inspire you.</p>
+                <hr class="small-hr" />
+            </div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
