--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>TEDxHITKolkata</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="favicon.ico" rel="icon" type="image/x-icon">
     <link rel="stylesheet" type="text/css" media="screen" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
@@ -122,12 +123,12 @@
                             the globe to amplify the impact of their remarkable projects and activities.
                         </p>
                     </div>
-                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs 12">
+                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs 12"></div>
-                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs 12">
+                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"></div>
+                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text-right">
                         <h1>About TEDx, <small>x = independently organized TED event</small></h1>
                         <p>
                             In the spirit of ideas worth spreading, TEDx is a program of local, self-organized events
