--- a/index.html
+++ b/index.html
@@ -85,66 +85,79 @@
                 <hr class="small-hr" />
                 <p>An assemblage of the best speakers in the industry to inform &amp; inspire you.</p>
                 <hr class="small-hr" />
-                <h1 class="font__oswald sub-heading">TEAM</h1>
-                <hr class="small-hr" />
-                <p>Meet the people who brought it all together.</p>
-                <hr class="small-hr" />
-                <h1 class="font__oswald sub-heading">ABOUT</h1>
-                <hr class="small-hr" />
-                <div class="row text-left">
-                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                        <h1>About TED</h1>
-                        <p>
-                            TED is a nonprofit organization devoted to Ideas Worth Spreading. Started as a four-day
-                            conference
-                            in California 30 years ago, TED has grown to support its mission with multiple initiatives.
-                            The two
-                            annual TED Conferences invite the world's leading thinkers and doers to speak for 18
-                            minutes or
-                            less. Many of these talks are then made available, free, at TED.com. TED speakers have
-                            included Bill
-                            Gates, Jane Goodall, Elizabeth Gilbert, Sir Richard Branson, Nandan Nilekani, Philippe
-                            Starck, Ngozi
-                            Okonjo-Iweala, Sal Khan and Daniel Kahneman.
-                            The annual TED Conference takes place each spring in Vancouver, British Columbia. TED's
-                            media
-                            initiatives include TED.com, where new TED Talks are posted daily; the Open Translation
-                            Project,
-                            which provides subtitles and interactive transcripts as well as translations from
-                            volunteers
-                            worldwide; the educational initiative TED-Ed. TED has established the annual TED Prize,
-                            where
-                            exceptional individuals with a wish to change the world get help translating their wishes
-                            into
-                            action; TEDx, which supports individuals or groups in hosting local, self- organized
-                            TED-style
-                            events around the world, and the TED Fellows program, helping world-changing innovators
-                            from around
-                            the globe to amplify the impact of their remarkable projects and activities.
-                        </p>
-                    </div>
-                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                <div>
+                    <h1 class="font__oswald sub-heading">TEAM</h1>
+                    <hr class="small-hr" />
+                    <p>Meet the people who brought it all together.</p>
+                    <hr class="small-hr" />
+                    <div id="container-team" class="text-left">
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"></div>
-                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text-right">
-                        <h1>About TEDx, <small>x = independently organized TED event</small></h1>
-                        <p>
-                            In the spirit of ideas worth spreading, TEDx is a program of local, self-organized events
-                            that
-                            bring
-                            people topgether to share a TED-like experience. At a TEDx event, TED Talks video and live
-                            speakers
-                            combine to spark deep discussion and connection. These local, self-organized events are
-                            branded
-                            TEDx, where x = independently organized TED event. The TED Conference provides general
-                            guidance
-                            for
-                            the TEDx program, but individual TEDx events are self-organized. (Subject to certain rules
-                            and
-                            regulations.)
-                        </p>
+            </div>
+            <div class="container">
+                <div>
+                    <h1 class="font__oswald sub-heading">ABOUT</h1>
+                    <hr class="small-hr" />
+                    <div class="row text-left">
+                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                            <h1>About TED</h1>
+                            <p>
+                                TED is a nonprofit organization devoted to Ideas Worth Spreading. Started as a four-day
+                                conference
+                                in California 30 years ago, TED has grown to support its mission with multiple
+                                initiatives.
+                                The two
+                                annual TED Conferences invite the world's leading thinkers and doers to speak for 18
+                                minutes or
+                                less. Many of these talks are then made available, free, at TED.com. TED speakers have
+                                included Bill
+                                Gates, Jane Goodall, Elizabeth Gilbert, Sir Richard Branson, Nandan Nilekani, Philippe
+                                Starck, Ngozi
+                                Okonjo-Iweala, Sal Khan and Daniel Kahneman.
+                                The annual TED Conference takes place each spring in Vancouver, British Columbia. TED's
+                                media
+                                initiatives include TED.com, where new TED Talks are posted daily; the Open Translation
+                                Project,
+                                which provides subtitles and interactive transcripts as well as translations from
+                                volunteers
+                                worldwide; the educational initiative TED-Ed. TED has established the annual TED Prize,
+                                where
+                                exceptional individuals with a wish to change the world get help translating their
+                                wishes
+                                into
+                                action; TEDx, which supports individuals or groups in hosting local, self- organized
+                                TED-style
+                                events around the world, and the TED Fellows program, helping world-changing innovators
+                                from around
+                                the globe to amplify the impact of their remarkable projects and activities.
+                            </p>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"></div>
+                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text-right">
+                            <h1>About TEDx, <small>x = independently organized TED event</small></h1>
+                            <p>
+                                In the spirit of ideas worth spreading, TEDx is a program of local, self-organized
+                                events
+                                that
+                                bring
+                                people topgether to share a TED-like experience. At a TEDx event, TED Talks video and
+                                live
+                                speakers
+                                combine to spark deep discussion and connection. These local, self-organized events are
+                                branded
+                                TEDx, where x = independently organized TED event. The TED Conference provides general
+                                guidance
+                                for
+                                the TEDx program, but individual TEDx events are self-organized. (Subject to certain
+                                rules
+                                and
+                                regulations.)
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
