--- a/index.html
+++ b/index.html
@@ -85,13 +85,36 @@
                 <hr class="small-hr" />
                 <p>An assemblage of the best speakers in the industry to inform &amp; inspire you.</p>
                 <hr class="small-hr" />
-                <div>
-                    <h1 class="font__oswald sub-heading">TEAM</h1>
-                    <hr class="small-hr" />
-                    <p>Meet the people who brought it all together.</p>
-                    <hr class="small-hr" />
-                    <div id="container-team" class="text-left">
+                <div id="container-speaker" style="margin: 0px 10%;">
+                    <div class="card">
+                        <div class="row">
+                            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                                <img src="img/speakers/srk.jpg" class="img-responsive" />
+
+                            </div>
+                            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                            </div>
+                        </div>
                     </div>
+                    <div class="card">
+                        <div class="row">
+                            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                                <img src="img/speakers/nk.jpg" class="img-responsive" />
+                            </div>
+                            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12"></div>
+                        </div>
+                    </div>
+                    <hr class="small-hr">
+                    You can find the complete assemblage <a href=""><b><u>here</u></b></a>.
+                    <hr class="small-hr">
+                </div>
+            </div>
+            <div class="container">
+                <h1 class="font__oswald sub-heading">TEAM</h1>
+                <hr class="small-hr" />
+                <p>Meet the people who brought it all together.</p>
+                <hr class="small-hr" />
+                <div id="container-team" class="text-left">
                 </div>
             </div>
             <div class="container">
