added dummy banner

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                     <hr class="small-hr">
                 </div>
             </div>
+            <img src="img/speakers/banner.jpg" style="width: 100%; height: auto; padding: 50px 0px;" />
             <div class="container">
                 <h1 class="font__oswald sub-heading">TEAM</h1>
                 <hr class="small-hr" />
@@ -126,33 +127,19 @@
                             <h1>About TED</h1>
                             <p>
                                 TED is a nonprofit organization devoted to Ideas Worth Spreading. Started as a four-day
-                                conference
-                                in California 30 years ago, TED has grown to support its mission with multiple
-                                initiatives.
-                                The two
-                                annual TED Conferences invite the world's leading thinkers and doers to speak for 18
-                                minutes or
-                                less. Many of these talks are then made available, free, at TED.com. TED speakers have
-                                included Bill
-                                Gates, Jane Goodall, Elizabeth Gilbert, Sir Richard Branson, Nandan Nilekani, Philippe
-                                Starck, Ngozi
-                                Okonjo-Iweala, Sal Khan and Daniel Kahneman.
+                                conference in California 30 years ago, TED has grown to support its mission with multiple
+                                initiatives. The two annual TED Conferences invite the world's leading thinkers and doers to speak for 18
+                                minutes or less. Many of these talks are then made available, free, at TED.com. TED speakers have
+                                included Bill Gates, Jane Goodall, Elizabeth Gilbert, Sir Richard Branson, Nandan Nilekani, Philippe
+                                Starck, Ngozi Okonjo-Iweala, Sal Khan and Daniel Kahneman. <br/>
                                 The annual TED Conference takes place each spring in Vancouver, British Columbia. TED's
-                                media
-                                initiatives include TED.com, where new TED Talks are posted daily; the Open Translation
-                                Project,
-                                which provides subtitles and interactive transcripts as well as translations from
-                                volunteers
-                                worldwide; the educational initiative TED-Ed. TED has established the annual TED Prize,
-                                where
-                                exceptional individuals with a wish to change the world get help translating their
-                                wishes
-                                into
-                                action; TEDx, which supports individuals or groups in hosting local, self- organized
-                                TED-style
-                                events around the world, and the TED Fellows program, helping world-changing innovators
-                                from around
-                                the globe to amplify the impact of their remarkable projects and activities.
+                                media initiatives include TED.com, where new TED Talks are posted daily; the Open Translation
+                                Project, which provides subtitles and interactive transcripts as well as translations from
+                                volunteers worldwide; the educational initiative TED-Ed. TED has established the annual TED Prize,
+                                where exceptional individuals with a wish to change the world get help translating their
+                                wishes into action; TEDx, which supports individuals or groups in hosting local, self- organized
+                                TED-style events around the world, and the TED Fellows program, helping world-changing innovators
+                                from around the globe to amplify the impact of their remarkable projects and activities.
                             </p>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -161,27 +148,20 @@
                     <div class="row">
                         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"></div>
                         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text-right">
-                            <h1>About TEDx, <small>x = independently organized TED event</small></h1>
+                            <h1 class="no-margin">About TEDx</h1> 
+                            <small style="display: inline-block; padding-bottom: 12px;">x = independently organized TED event</small>
+                            <br/>
                             <p>
                                 In the spirit of ideas worth spreading, TEDx is a program of local, self-organized
-                                events
-                                that
-                                bring
-                                people topgether to share a TED-like experience. At a TEDx event, TED Talks video and
-                                live
-                                speakers
-                                combine to spark deep discussion and connection. These local, self-organized events are
-                                branded
-                                TEDx, where x = independently organized TED event. The TED Conference provides general
-                                guidance
-                                for
-                                the TEDx program, but individual TEDx events are self-organized. (Subject to certain
-                                rules
-                                and
-                                regulations.)
+                                events that bring people topgether to share a TED-like experience. At a TEDx event, TED Talks video and live
+                                speakers combine to spark deep discussion and connection. These local, self-organized events are
+                                branded TEDx, where x = independently organized TED event. The TED Conference provides general
+                                guidance for the TEDx program, but individual TEDx events are self-organized. (Subject to certain
+                                rules and regulations.)
                             </p>
                         </div>
                     </div>
+                    <br/><br/>
                 </div>
             </div>
         </div>
