fixed UI bugs in iPad and iPhone X and iphone SE - teams part - removed margin and padding - member description and image were not aligning in a single line

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
           src="img/banner.jpg"
           style="width: 100%; height: auto; padding: 50px 0px;"
         />
-        <div class="container">
+        <div class="container no-padding">
           <h1 class="font__oswald sub-heading">TEAM</h1>
           <hr class="small-hr" />
           <p>Meet the people who brought it all together.</p>
