--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
       </div>
       <button id="explore-button" class="btn">EXPLORE</button>
     </div>
-    <div id="main">
-      <div id="landing" class="text-center font__open-sans">
+    <div id="main" class="font__open-sans">
+      <div id="landing" class="text-center">
         <h1 class="font__oswald sub-heading">THEME: OUT OF THE BOX</h1>
         <hr class="small-hr" />
         <div class="details">
@@ -122,113 +122,108 @@
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 parent-card">
               <div class="card">
                 <div class="box">
-                  <div class="img">
-                    <img
-                      src="img/speakers/1.jpg"
-                    />
-                  </div>
+                  <div class="img"><img src="img/speakers/1.jpg" /></div>
                   <h2>
-                    Sayan Chakraborty<br/><span>Entrepreneur <br/> Motivational Speaker</span>
-                  </h2>
-                  <hr/>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                    sed do eiusmod tempor incididunt ut labore et.
-                  </p>
-                  <hr/>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 parent-card">
-              <div class="card">
-                <div class="box">
-                  <div class="img">
-                    <img
-                    src="img/speakers/2.jpg"
-                    />
-                  </div>
-                  <h2>
-                    Ansh Mishra<br /><span>Traveller<br/>Blogger</span>
+                    Sayan Chakraborty<br /><span
+                      >Entrepreneur <br />
+                      Motivational Speaker</span
+                    >
                   </h2>
                   <hr />
                   <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                     sed do eiusmod tempor incididunt ut labore et.
                   </p>
-                  <hr/>
+                  <hr />
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 parent-card">
+              <div class="card">
+                <div class="box">
+                  <div class="img"><img src="img/speakers/2.jpg" /></div>
+                  <h2>
+                    Ansh Mishra<br /><span>Traveller<br />Blogger</span>
+                  </h2>
+                  <hr />
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                    sed do eiusmod tempor incididunt ut labore et.
+                  </p>
+                  <hr />
                   <!--
-                  <span>
-                    <ul>
-                      <li>
-                        <a href="#"
-                          ><i class="fab fa-facebook-f" aria-hidden="true"></i
-                        ></a>
-                      </li>
-                      <li>
-                        <a href="#"
-                          ><i class="fab fa-twitter" aria-hidden="true"></i
-                        ></a>
-                      </li>
-                      <li>
-                        <a href="#"
-                          ><i class="fab fa-instagram" aria-hidden="true"></i
-                        ></a>
-                      </li>
-                    </ul>
-                  </span>
-                    -->
+                    <span>
+                      <ul>
+                        <li>
+                          <a href="#"
+                            ><i class="fab fa-facebook-f" aria-hidden="true"></i
+                          ></a>
+                        </li>
+                        <li>
+                          <a href="#"
+                            ><i class="fab fa-twitter" aria-hidden="true"></i
+                          ></a>
+                        </li>
+                        <li>
+                          <a href="#"
+                            ><i class="fab fa-instagram" aria-hidden="true"></i
+                          ></a>
+                        </li>
+                      </ul>
+                    </span>
+                  -->
                 </div>
               </div>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 parent-card">
               <div class="card">
                 <div class="box">
-                  <div class="img">
-                    <img
-                    src="img/speakers/3.jpg"
-                    />
-                  </div>
+                  <div class="img"><img src="img/speakers/3.jpg" /></div>
                   <h2>
-                    Sweta Ojha<br /><span>Writer <br/> Feminist</span>
+                    Sweta Ojha<br /><span
+                      >Writer <br />
+                      Feminist</span
+                    >
                   </h2>
-                  <hr/>
+                  <hr />
                   <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                     sed do eiusmod tempor incididunt ut labore et.
                   </p>
-                  <hr/>
+                  <hr />
                 </div>
               </div>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 parent-card">
               <div class="card">
                 <div class="box">
-                  <div class="img">
-                    <img
-                    src="img/speakers/4.jpg"
-                    />
-                  </div>
+                  <div class="img"><img src="img/speakers/4.jpg" /></div>
                   <h2>
-                        Mita Tarafder
-                        <br /><span>Senior Principal Scientist<br/> CSIR-NML, Jamshedpur
-                            </span>
+                    Mita Tarafder <br /><span
+                      >Senior Principal Scientist<br />
+                      CSIR-NML, Jamshedpur
+                    </span>
                   </h2>
-                  <hr/>
+                  <hr />
                   <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                     sed do eiusmod tempor incididunt ut labore et.
                   </p>
-                  <hr/>
+                  <hr />
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <img
-          src="img/banner.jpg"
-          style="width: 100%; height: auto; padding: 50px 0px;"
-        />
-        <div class="container no-padding">
+        <figure class="no-padding no-margin">
+          <img src="img/banner.jpg" class="banner" />
+          <figcaption>
+            <small style="color:#ffffff;"
+              >linkedin.com/in/ayushagarwal28/</small
+            >
+          </figcaption>
+        </figure>
+        <div class="container no-padding" style="margin-top: 50px;">
           <h1 class="font__oswald sub-heading">TEAM</h1>
           <hr class="small-hr" />
           <p>Meet the people who brought it all together.</p>
@@ -284,7 +279,70 @@
           </div>
         -->
       </div>
+      <footer>
+        <hr />
+        <div class="container">
+          <div class="row font-bolder">
+            <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+              <p>
+                SHARE
+                <a href="https://facebook.com/sharer/sharer.php"
+                  ><i class="fab fa-facebook-f"></i
+                ></a>
+                <a href=""><i class="fab fa-twitter"></i></a>
+              </p>
+            </div>
+            <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+              <p>
+                FOLLOW US
+                <a href="https://facebook.com/tedxhitkolkata/" target="_blank"
+                  ><i class="fab fa-facebook"></i
+                ></a>
+                <a href="https://twitter.com/hitkolkata" target="_blank"
+                  ><i class="fab fa-twitter"></i
+                ></a>
+                <a href="https://instagram.com/tedx_hitkolkata/" target="_blank"
+                  ><i class="fab fa-instagram" aria-hidden="true"></i
+                ></a>
+              </p>
+            </div>
+            <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+              <p><a href="mailto:alfarhanzahedi@gmail.com">EMAIL US</a></p>
+            </div>
+          </div>
+        </div>
+        <hr style="margin-top: 12px;" />
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+              <h4 class="font-bolder">ABOUT</h4>
+              <p>
+                <a href="">TED</a><br />
+                <a href="">TEDx</a><br />
+                <a href="">TEDxHITKolkata</a>
+              </p>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                <h4 class="spacer"> &nbsp;</h4>
+                <p>
+                    <span class="font-bolder"><a href="http://heritageit.edu" target="_blank">Heritage Institute of Technology</a></span><br/>
+                    Chowbaga Road, Anandapur,<br/> PO: East Kolkata Twp, Kolkata - 700107
+                </p>
+            </div>
+          </div>
+        </div>
+        <hr/>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>This independent TEDx event is operated under license from TED.</p>
+                    <p>&copy;2019 | TEDxHITKolkata</p>
+                </div>
+            </div>
+        </div>
+      </footer>
     </div>
+
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
