--- a/index.html
+++ b/index.html
@@ -311,8 +311,9 @@
               <p><a href="mailto:alfarhanzahedi@gmail.com">EMAIL US</a></p>
             </div>
           </div>
+          <hr style="margin-top: 12px; border-width: 2px; border-color: red; margin-right: 80%;" />
         </div>
-        <hr style="margin-top: 12px;" />
+        
         <div class="container">
           <div class="row">
             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
@@ -331,8 +332,9 @@
                 </p>
             </div>
           </div>
+          <hr style="border-width: 2px; border-color: red; margin-right: 80%;" />
+
         </div>
-        <hr/>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
