--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
             inspire you.
           </p>
           <hr class="small-hr" />
-          <div id="container-speaker">
+          <div id="">
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 parent-card">
-              <div class="card">
+              <div class="card" data-toggle="modal" data-target="#myModal">
                 <div class="box">
                   <div class="img"><img src="img/speakers/1.jpg" /></div>
                   <h2>
@@ -138,6 +138,7 @@
                 </div>
               </div>
             </div>
+
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 parent-card">
               <div class="card">
                 <div class="box">
@@ -215,6 +216,7 @@
             </div>
           </div>
         </div>
+
         <figure class="no-padding no-margin">
           <img src="img/banner.jpg" class="banner" />
           <figcaption>
@@ -228,7 +230,7 @@
           <hr class="small-hr" />
           <p>Meet the people who brought it all together.</p>
           <hr class="small-hr" />
-          <br/>
+          <br />
           <div id="container-team" class="text-left"></div>
         </div>
         <!--
@@ -311,9 +313,11 @@
               <p><a href="mailto:alfarhanzahedi@gmail.com">EMAIL US</a></p>
             </div>
           </div>
-          <hr style="margin-top: 12px; border-width: 2px; border-color: red; margin-right: 80%;" />
+          <hr
+            style="margin-top: 12px; border-width: 2px; border-color: red; margin-right: 80%;"
+          />
         </div>
-        
+
         <div class="container">
           <div class="row">
             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
@@ -325,27 +329,69 @@
               </p>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                <h4 class="spacer"> &nbsp;</h4>
-                <p>
-                    <span class="font-bolder"><a href="http://heritageit.edu" target="_blank">Heritage Institute of Technology</a></span><br/>
-                    Chowbaga Road, Anandapur,<br/> PO: East Kolkata Twp, Kolkata - 700107
-                </p>
+              <h4 class="spacer">&nbsp;</h4>
+              <p>
+                <span class="font-bolder"
+                  ><a href="http://heritageit.edu" target="_blank"
+                    >Heritage Institute of Technology</a
+                  ></span
+                ><br />
+                Chowbaga Road, Anandapur,<br />
+                PO: East Kolkata Twp, Kolkata - 700107
+              </p>
             </div>
           </div>
-          <hr style="border-width: 2px; border-color: red; margin-right: 80%;" />
-
+          <hr
+            style="border-width: 2px; border-color: red; margin-right: 80%;"
+          />
         </div>
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>This independent TEDx event is operated under license from TED.</p>
-                    <p>&copy;2019 | TEDxHITKolkata</p>
-                </div>
+          <div class="row">
+            <div class="col-lg-12">
+              <p>
+                This independent TEDx event is operated under license from TED.
+              </p>
+              <p>&copy;2019 | TEDxHITKolkata</p>
             </div>
+          </div>
         </div>
       </footer>
     </div>
-
+    <div id="modals-speaker" class="font__open-sans">
+      <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">
+                &times;
+              </button>
+              <img src="img/speakers/1.jpg" />
+              <div class="modal-title font-bolder">
+                <h3 class="font-bolder">Sayan Chakraborty</h3>
+                Entrepreneur <br />
+                Motivational Speaker
+              </div>
+            </div>
+            <div class="modal-body">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                eiusmod tempor incididunt ut labore et.Lorem ipsum dolor sit
+                amet, consectetur adipisicing elit, sed do eiusmod tempor
+                incididunt ut labore et.Lorem ipsum dolor sit amet, consectetur
+                adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                et.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                do eiusmod tempor incididunt ut labore et.Lorem ipsum dolor sit
+                amet, consectetur adipisicing elit, sed do eiusmod tempor
+                incididunt ut labore et.Lorem ipsum dolor sit amet, consectetur
+                adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                et.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                do eiusmod tempor incididunt ut labore et.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
