--- a/index.html
+++ b/index.html
@@ -124,15 +124,14 @@
                 <div class="box">
                   <div class="img"><img src="img/speakers/1.jpg" /></div>
                   <h2>
-                    Sayan Chakraborty<br /><span
-                      >Entrepreneur <br />
-                      Motivational Speaker</span
+                    Sanjiv Mehta<br /><span
+                      >Country Manager, HP <br />
+                      Technologist</span
                     >
                   </h2>
                   <hr />
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                    sed do eiusmod tempor incididunt ut labore et.
+                    Sanjiv Mehta has 30+ Years in IT Industry with experience in Technology Sales, Business Development, Strategy & Planning with operation in multiple geographies. 
                   </p>
                   <hr />
                 </div>
@@ -144,7 +143,7 @@
                 <div class="box">
                   <div class="img"><img src="img/speakers/2.jpg" /></div>
                   <h2>
-                    Ansh Mishra<br /><span>Traveller<br />Blogger</span>
+                    Madiha Ahmed<br /><span>outh Mentor at OpenHearts<br />Blogger</span>
                   </h2>
                   <hr />
                   <p>
@@ -367,25 +366,22 @@
               </button>
               <img src="img/speakers/1.jpg" />
               <div class="modal-title font-bolder">
-                <h3 class="font-bolder">Sayan Chakraborty</h3>
-                Entrepreneur <br />
-                Motivational Speaker
+                <h3 class="font-bolder">Sanjiv Mehta</h3>
+                Country Manager, HP <br />
+                Technologist
               </div>
             </div>
             <div class="modal-body">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                eiusmod tempor incididunt ut labore et.Lorem ipsum dolor sit
-                amet, consectetur adipisicing elit, sed do eiusmod tempor
-                incididunt ut labore et.Lorem ipsum dolor sit amet, consectetur
-                adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                et.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                do eiusmod tempor incididunt ut labore et.Lorem ipsum dolor sit
-                amet, consectetur adipisicing elit, sed do eiusmod tempor
-                incididunt ut labore et.Lorem ipsum dolor sit amet, consectetur
-                adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                et.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                do eiusmod tempor incididunt ut labore et.
+                Sanjiv Mehta is an award winning, experienced global business leader & technologist, 
+                a go-to-marketer, a sales coach & mentor, and a speaker on CNBC. <br/>
+                He has 30+ years in IT Industry with an immense experience in technology sales, business development, 
+                strategy & planning with operation in multiple geographies.
+                He has done his masters in Marketing & Economics and E-MBA from Stanford. <br/>
+                His favourite quote: <br /> 
+                <q><i>Start by doing what’s necessary; <br/>
+                Then do what’s possible; <br/>
+                And suddenly you’re doing the impossible.</i></q>
               </p>
             </div>
           </div>
